--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading</title>
+    <title>home</title>
     <link rel="stylesheet" href="style/loading.css">
 </head>
 <body>
     this is my homepage
     <a href="loading.html">This is my loading page</a>
+    <a href="search.html">This is my search pagessh -T git@ssh.github.com -p 443</a>
 </body>
 </html>
