--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     this is my homepage
     <a href="loading.html">This is my loading page</a>
-    <a href="search.html">This is my search pagessh -T git@ssh.github.com -p 443</a>
+    <a href="search.html">This is my search page</a>
+    <a href="practice.html">this is practice</a>
 </body>
 </html>
